Prepared for deployment

--- a/predictor/templates/predictor/home.html
+++ b/predictor/templates/predictor/home.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
-    <title>CKD Prediction</title>
+    <title> 🩺 CKD Prediction</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2966/2966486.png">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -153,7 +154,7 @@
 
 <header>
     <h1> 🩺👨‍⚕️ Ai - Chronic Kidney Disease Prediction Tool</h1>
-    
+
 </header>
 
 
@@ -201,19 +202,19 @@
     ">
         <h3 style="color: #0077b6; text-align: center;">About This Ai CKD Prediction Tool</h3>
         <p>
-            This Ai web application predicts the likelihood of 
+            This Ai web application predicts the likelihood of
             <strong>Chronic Kidney Disease (CKD)</strong> using patient medical data.
-            CKD  is a condition characterized by gradual loss of kidney function over time. 
+            CKD  is a condition characterized by gradual loss of kidney function over time.
             Early detection is crucial for preventing serious health complications.
 
         </p>
 
-       
 
-        <ul style="line-height: 1.8; font-size: 12.5px;"> 
+
+        <ul style="line-height: 1.8; font-size: 12.5px;">
             <li>📊 <strong>Dataset:</strong> 400 patient records- containing 24 clinical features.</li>
+            <li>🔍 <strong>Feature Selection:</strong>From 24 input features, 6 key predictors were selected using SelectKBest (scikit-learn)</li>
             <li>🧠 <strong>Algorithm:</strong> Random Forest Classification-a machine learning model 80% trained to identify CKD patterns. </li>
-            <li>🔍 <strong> Feature Selection:</strong>From 24 input features, 6 key predictors were selected using SelectKBest (scikit-learn)</li>
             <li>📈 <strong>Model Accuracy:</strong>Test dataset: Accuracy: 97.5% | 🚀 ROC-AUC Score: 99.72% </li>
             <li>⚙️ <strong>Framework:</strong> Developed using Python Django, Scikit-learn, Pandas and Numpy</li>
             <li>🩺 <strong>Purpose:</strong> Early CKD detection based on clinical indicators such as Albumin level in urine, Blood glucose random , Blood urea , Serum creatinine, Packed cell volume and White blood cell count.     </li>
@@ -311,7 +312,7 @@
         </div>
     </form>
 
-    
+
 </div>
 
 <footer>
